1.4.0 /
------------------

* Add .only property to makeKeyRange() options
* Add getBatch() method
* Fix bug when calling IDBStore without arguments
* Fix bug when calling IDBStore with ready callback as only argument
* Point IDBStore prototype's constructor property to IDBStore
* Stability improvements



1.3.0 / 2013-08-13
------------------

* Make IDBWrapper able to run inside of Workers
* Add putBatch() and removeBatch() methods
* Add worker example
* Move JSHint settings to own config file



1.2.0 / 2013-05-31
------------------

* Add autoContinue option to iterate() method [maxogden]
* Make put() method work with out-of-line keys [maxogden]
* Make batch() method work with out-of-line keys [maxogden]
* Misc Refactoring



1.1.0 / 2013-03-26
------------------

* Move all callbacks from request level to transaction level
* Misc Refactoring



1.0.0 / 2013-02-05
------------------

* Add query() method
* Add storePrefix property to constructor [englercj]
* Add JSDoc
* Add input checks to the batch() method
* Add Closure Compiler to repository
* Add MAKEFILE
* Misc cleanup



0.3.1 / 2013-01-04
------------------

* lowercase idbstore.js
* Add minified version
* Add version property to IDBStore



0.3.0 / 2012-12-18
------------------

* Fix potentially non-unique generated IDs
* Add batch() method [Raynos]
* Fix a bug where the success handler could be called even if there was an error
* Fix a bug where old IndexedDB implementations were not detected successfully



0.2.1 / 2012-11-20
------------------

* Add error handler to constructor
* Remove support for numeric transaction and cursor types.
* Misc cleanup



0.2.0 / 2012-11-20
------------------

* Start versioning
